<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mmbackground"
    tools:context=".MainMenu" >

    <ImageButton
        android:id="@+id/readStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="116dp"
        android:background="#00000000"
        android:src="@drawable/readstoryicon"
        android:contentDescription="@string/readStory" />

    <ImageButton
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="39dp"
        android:background="#00000000"
        android:src="@drawable/quiticon" 
        android:contentDescription="@string/quit"/>

    <ImageButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/quit"
        android:layout_marginLeft="44dp"
        android:background="#00000000"
        android:src="@drawable/loginicon" 
        android:contentDescription="@string/login"/>

    <ImageButton
        android:id="@+id/createNewStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/readStory"
        android:layout_marginLeft="151dp"
        android:background="#00000000"
        android:src="@drawable/createnewstoryicon"
        android:contentDescription="@string/newStory" />

    <ImageButton
        android:id="@+id/viewGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:src="@drawable/viewgalleryicon"
        android:contentDescription="@string/viewGallery" />

</RelativeLayout>